// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/channel_members_dropdown should match snapshot for channel_members_dropdown 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className=""
>
  <button
    className="dropdown-toggle theme color--link style--none"
    type="button"
  >
    <span
      className="sr-only"
    />
    <span>
      <FormattedMessage
        defaultMessage="Channel Admin"
        id="channel_members_dropdown.channel_admin"
      />
       
    </span>
    <DropdownIcon />
  </button>
  <Menu
    ariaLabel="Change the role of channel member"
    openLeft={true}
    openUp={false}
  >
    <MenuItemAction
      id="undefined-make-channel-member"
      onClick={[Function]}
      show={false}
      text="Make Channel Member"
    />
    <MenuItemAction
      id="undefined-make-channel-admin"
      onClick={[Function]}
      show={false}
      text="Make Channel Admin"
    />
    <MenuItemAction
      onClick={[Function]}
      show={true}
      text="Remove from Channel"
    />
  </Menu>
</MenuWrapper>
`;

exports[`components/channel_members_dropdown should match snapshot for dropdown with guest user 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className=""
>
  <button
    className="dropdown-toggle theme color--link style--none"
    type="button"
  >
    <span
      className="sr-only"
    />
    <span>
      <FormattedMessage
        defaultMessage="Channel Guest"
        id="channel_members_dropdown.channel_guest"
      />
       
    </span>
    <DropdownIcon />
  </button>
  <Menu
    ariaLabel="Change the role of channel member"
    openLeft={true}
    openUp={false}
  >
    <MenuItemAction
      id="undefined-make-channel-member"
      onClick={[Function]}
      show={false}
      text="Make Channel Member"
    />
    <MenuItemAction
      id="undefined-make-channel-admin"
      onClick={[Function]}
      show={false}
      text="Make Channel Admin"
    />
    <MenuItemAction
      onClick={[Function]}
      show={true}
      text="Remove from Channel"
    />
  </Menu>
</MenuWrapper>
`;

exports[`components/channel_members_dropdown should match snapshot for dropdown with shared user 1`] = `
<div
  className="more-modal__shared-actions"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    delayShow={400}
    overlay={
      <Tooltip
        bsClass="tooltip"
        id="sharedTooltip"
        placement="right"
      >
        <FormattedMessage
          defaultMessage="From trusted organizations"
          id="shared_user_indicator.tooltip"
        />
      </Tooltip>
    }
    placement="bottom"
    trigger={
      Array [
        "hover",
        "focus",
      ]
    }
  >
    <span>
      <FormattedMessage
        defaultMessage="Shared Member"
        id="channel_members_dropdown.shared_member"
      />
      <i
        className="shared-user-icon icon-circle-multiple-outline"
      />
    </span>
  </OverlayTrigger>
</div>
`;

exports[`components/channel_members_dropdown should match snapshot for group_constrained channel 1`] = `
<div>
  <FormattedMessage
    defaultMessage="Channel Admin"
    id="channel_members_dropdown.channel_admin"
  />
</div>
`;

exports[`components/channel_members_dropdown should match snapshot for not dropdown with guest user 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className=""
>
  <button
    className="dropdown-toggle theme color--link style--none"
    type="button"
  >
    <span
      className="sr-only"
    />
    <span>
      <FormattedMessage
        defaultMessage="Channel Guest"
        id="channel_members_dropdown.channel_guest"
      />
       
    </span>
    <DropdownIcon />
  </button>
  <Menu
    ariaLabel="Change the role of channel member"
    openLeft={true}
    openUp={false}
  >
    <MenuItemAction
      id="undefined-make-channel-member"
      onClick={[Function]}
      show={false}
      text="Make Channel Member"
    />
    <MenuItemAction
      id="undefined-make-channel-admin"
      onClick={[Function]}
      show={false}
      text="Make Channel Admin"
    />
    <MenuItemAction
      onClick={[Function]}
      show={true}
      text="Remove from Channel"
    />
  </Menu>
</MenuWrapper>
`;

exports[`components/channel_members_dropdown should match snapshot opening dropdown upwards 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className=""
>
  <button
    className="dropdown-toggle theme color--link style--none"
    type="button"
  >
    <span
      className="sr-only"
    />
    <span>
      <FormattedMessage
        defaultMessage="Channel Admin"
        id="channel_members_dropdown.channel_admin"
      />
       
    </span>
    <DropdownIcon />
  </button>
  <Menu
    ariaLabel="Change the role of channel member"
    openLeft={true}
    openUp={true}
  >
    <MenuItemAction
      id="undefined-make-channel-member"
      onClick={[Function]}
      show={false}
      text="Make Channel Member"
    />
    <MenuItemAction
      id="undefined-make-channel-admin"
      onClick={[Function]}
      show={false}
      text="Make Channel Admin"
    />
    <MenuItemAction
      onClick={[Function]}
      show={true}
      text="Remove from Channel"
    />
  </Menu>
</MenuWrapper>
`;
